# smart-report-generator

./: .gitignore  README.md  manage.py  pyproject.toml
report/: admin.py  models.py  urls.py  utils.py  views.py
report/migrations/: 0001_initial.py  0002_alter_report_options_remove_report_description_and_more.py
report/templates/report/: course_report.html  grade_report.html  index.html  report_list.html  student_report.html
rge/: asgi.py  settings.py  urls.py  wsgi.py
student/: forms.py  models.py  urls.py  views.py
student/migrations/: 0001_initial.py  0002_remove_course_semester.py  0003_grade_letter_grade_alter_grade_grade_and_more.py  0004_student_is_active_alter_grade_grade_type.py  0005_alter_grade_unique_together.py  0006_alter_grade_grade_type.py  0007_update_letter_grades.py
student/templates/student/: base.html  bulk_enrollment.html  bulk_grade_entry.html  course_confirm_delete.html  course_detail.html  course_enrollment_form.html  course_form.html  course_list.html  dashboard.html  enrollment_confirm_delete.html  enrollment_detail.html  enrollment_form.html  enrollment_list.html  grade_confirm_delete.html  grade_detail.html  grade_form.html  grade_list.html  inactive_student_list.html  student_confirm_delete.html  student_detail.html  student_form.html  student_list.html
